address additional Error Prone warnings