@@ -70,7 +70,7 @@ class TestJarBuilder {
 
 	private Map<String, byte[]> compileClasses() throws IOException {
 		if (classes.isEmpty()) {
-			return Collections.emptyMap();
+			return Map.of();
 		}
 
 		JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
@@ -106,14 +106,15 @@ class TestJarBuilder {
 			}
 		}
 
-		return compiledClasses;
+		return Map.copyOf(compiledClasses);
 	}
 
 	private void cleanupTempDir() throws IOException {
-		Files.walk(tempDir)
-						.sorted(Comparator.reverseOrder())
-						.map(Path::toFile)
-						.forEach(File::delete);
+		try (var stream = Files.walk(tempDir)) {
+			stream.sorted(Comparator.reverseOrder())
+							.map(Path::toFile)
+							.forEach(File::delete);
+		}
 	}
 
 	/**
